--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: true 
+          push: false 
           tags: marceloscientist1983/maioridade-app-go-ci:latest          
 
     
