--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/setup-go@v2
         with:
           go-version: 1.19
+      - run: go mod tidy
       - run: go test
       - run: go run main.go
       - name: Set up QEMU
