--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: false 
+          push: true 
           tags: marceloscientist1983/maioridade-app-go-ci:latest          
 
     
