ci: some fixings plus sonar cloud

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,15 @@ jobs:
         with:
           go-version: 1.23.2
       - run: go mod tidy
-      - run: go test
+      - run: go test --coverprofile=coverage.out
       - run: go run main.go
+
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
 
